src/compiler/z42.Tests/Fixtures/errors/generic_baseclass_not_first/source.z42
namespace Demo;

interface IFoo { void M(); }
class Animal { }

void F<T>(T x) where T: IFoo + Animal { }

void Main() { }
